# handler/createOpening.go
@@ -7,6 +7,18 @@ import (
 	"github.com/nathanfabio/goOpportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Create Opening
+// @Description Create Opening
+// @Tags openings
+// @Accept json
+// @Produce json
+// @Param request body CreateOpeningRequest true "Request body"
+// @Success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
 
